--- a/TODO.txt
+++ b/TODO.txt
@@ -7,9 +7,16 @@ TODO:
 			-> then write it out in a datastructure then load into the map  [X]
 		place hostages into RIGHT places, with animation (2h) [X] 
 
-		place the sceneries into RIGHT place as well, with animation (4h) [] @Current 
+		place the sceneries into RIGHT place as well, with animation (4h) [] 
 
-	PUT THE PLAYER CODE IN OTHER FILE (1h) []
+	WORK ON THE CAMERA APPLY CODE (2h) []
+
+	Reminder: 
+		i feel like we're having a huge spagetti when using levelData that can be modified in player body   
+		since i have no idea where the data is modified so it's really hard to track   
+		for example: right now the player collider rect is set inside the player update method 
+					 and the that collider rect we track it outside of the player body 
+					 Idea: may be we should have a get collider method on the player 
 
 	ENEMY (2h) []
 
@@ -59,6 +66,7 @@ BUG:
 	THE FRAMES LOOK DISTORED BECAUSE THE CALCULATED AXIS IS KINDA OFF []  
 	
 DONE: 
+	PUT THE PLAYER CODE IN OTHER FILE (1h) [X] 
 	HAVE ONE GOOD HOSTAGES (4h) [X]
 		need animations  (1 frame) [X]
 		need state machine (physics, animation) [X]
