--- a/TODO.txt
+++ b/TODO.txt
@@ -3,11 +3,13 @@ TODO:
 
 	ENEMY PLACEMENT AND GENERATION (2h) []
 
-	ENEMY INTERACTION WITH PLAYER (2h) []
+	ENEMY INTERACTION (SLASHING) WITH PLAYER (2h) []
 
 	GRENADE (2h) []
 
 	LOAD THE LEVEL METADATA (JSON) FROM A FILE SO THAT NO NEED TO RECOMPILE (2h) []
+
+	TAKE NEW WEAPON (2h) []
 
 	PLACE ALL THE STUFF ON THE LEVEL (4h) [] 
 		have the camera working [X]
@@ -35,6 +37,8 @@ TODO:
 		this is the link to the easing video: https://www.youtube.com/watch?v=zLh0K1PdUbc&ab_channel=CodingMath
 
 	REFACTOR THE LEVEL1 INTO ANOTHER CLASS, THINGS STARTING TO GET CLUSTERED (2h) []
+
+	SIMPLE BOSS FIGHT (4h) []
 
 	FIXME: from background to collider have some jittery when the background sliding, maybe because it's the updating order Entity 
 		-> pretty everything seems jittery
