have basic rebel soilder in place

--- a/TODO.txt
+++ b/TODO.txt
@@ -9,6 +9,19 @@ TODO:
 
 	LOAD THE LEVEL METADATA (JSON) FROM A FILE SO THAT NO NEED TO RECOMPILE (2h) []
 
+	HAVE A FRAMEWORK FOR CREATING AN ENTITY IN THE GAME (4h): []
+		AN ENTITY IN THE GAME INCLUDES: 
+			COLLIDER 
+			PHYSICS STATE MACHINE 	
+			ANIMATIONS
+			ANIMATION STATE MACHINE 
+
+		INJECT ALL OF THESE FROM OUTSIDE, SOMEHOW
+
+		MAYBE HAVE A CPU CONTROLLED ENTITY AND PLAYER CONTROLLED ENTITY ? 
+			CPU CONTROLLED ENTITY HAVING A UPDATE() without input
+			PLAYER CONTROLLED ENTITY HAVING A UPDATE() input
+
 	TAKE NEW WEAPON (2h) []
 
 	PLACE ALL THE STUFF ON THE LEVEL (4h) [] 
