player interaction with hostage is good

--- a/TODO.txt
+++ b/TODO.txt
@@ -1,9 +1,7 @@
 TODO:  
-	ENEMY (2h) [] @Current 
+	ENEMY INTERACTION (SLASHING) WITH PLAYER (2h) [] @Current 
 
-	ENEMY PLACEMENT AND GENERATION (2h) []
-
-	ENEMY INTERACTION (SLASHING) WITH PLAYER (2h) []
+	ENEMY PLACEMENT AND GENERATION (2h) [] 
 
 	GRENADE (2h) []
 
@@ -104,6 +102,9 @@ BUG:
 	THE FRAMES LOOK DISTORED BECAUSE THE CALCULATED AXIS IS KINDA OFF []  
 	
 DONE: 
+	HOSTAGE ONLY UNTIED WHEN THE PLAYER PRESS J (2h) [X] 
+
+	ENEMY (2h) [X] 
 	LOCK THE MAP KEEP THE PLAYER FROM SEEING THE MAGENTA BACKGROUND (.5h) [X] 
 
 	// Camera state -> @Revisit: Check the coordinate of these again (1h) [X] 
