now the player can be slashed by rebels, but now there are only 1 rebel, we need to scale it up though

--- a/TODO.txt
+++ b/TODO.txt
@@ -1,5 +1,11 @@
 TODO:  
 	ENEMY INTERACTION (SLASHING) WITH PLAYER (2h) [] @Current 
+		-> Player knock back physic []
+		-> Player death animation []
+
+	ENEMY ANIMATIONS (2h) []
+		ANIMATION PTS [] 
+		ANIMATION Installation []
 
 	ENEMY PLACEMENT AND GENERATION (2h) [] 
 
