Update TODO.txt, i will keep working on this tomorrow

--- a/TODO.txt
+++ b/TODO.txt
@@ -1,5 +1,5 @@
 TODO:  
-	PLAYER THROWING GRENADE (with animation) (2h) []
+	BASIC PLAYER THROWING GRENADE (with animation) (2h) []
 		GRENADE ALSO HAVE 2 STATE MACHINE: 
 			Physic state machine
 				First hop
@@ -61,16 +61,20 @@ TODO:
 				x += groundHit.x;
 				y += groundHit.y;
 
-			Current the old jumping method that we use does not adjust the speed of the interpolation using specific time frame @Current 
+			Current the old jumping method that we use does not adjust the speed of the interpolation using specific time frame (1h) [] @Current 
 			but instead use the specific speed that seems good 
 			-> Make the speed depends on the time frame instead 
 			-> Meaning the t will go from 0 to 1 in a specific time 
 
 		grenade animation (1 frame) [X]
 
-		player throwing animation (1 frame) 
+		player throwing animation [] (can't find the animation in the image) (1 frame) 
 
-	THE THROWING ANIMATION SHOULD BE INDEPENDENT FROM OTHERS LEG ANIMATION (2h) []
+	THE THROWING ANIMATION SHOULD BE INDEPENDENT FROM LEG ANIMATION (2h) []
+
+	CAN THROW THE GRENADE DEPENDS ON THE FACING (1h) [] 
+
+	CAN THROW MULTIPLE GRENADE (2h) []
 
 	ENEMY THROWING GRENADE (with animation) (2h) []
 
